rest/front-end.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: demucs
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: demucs
        tier: frontend
    spec:
      containers:
      - name: d-frontend
        image: tirthankar95/demucs-rest:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  labels:
    app: demucs
    tier: frontend
spec:
  ports:
  - port: 9000
    targetPort: 5000
  selector:
    app: demucs
    tier: frontend
---
